manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: aa-82212548
spec:
    ports:
    - port: 8080 
    selector:
        app: "aa-82212548"
